Updated routing, made auth better

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,1 @@
-<html>
-  <body>
-    <a href="/auth/steam">Login</a>
-    <a href="/control">Control</a>
-  </body>
-</html>
+<p>Welcome to TF2Frags.net!</p>
