--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,12 +1,12 @@
-<div class="navbar">
-  <ul>
-    <li><a href="/">Home</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
     <% if (user) { %>
-      <li><a href="/manage/upload/">Upload</a></li>
-      <li><a href="/manage/">Manage</a></li>
-      <li><a href="/auth/logout/">Logout</a></li>
+      <li class="nav-item"><a class="nav-link" href="/manage/upload/">Upload</a></li>
+      <li class="nav-item"><a class="nav-link" href="/manage/">Manage</a></li>
+      <li class="nav-item"><a class="nav-link" href="/auth/logout/">Logout</a></li>
     <% } else { %>
-      <li><a href="/auth/steam/">Login</a></li>
+      <li class="nav-item"><a class="nav-link" href="/auth/steam/">Login</a></li>
     <% } %>
   </ul>
-</div>
+</nav>
