--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,1 +1,18 @@
-<p>Upload</p>
+<h2>Upload</h2>
+<form action='/manage/upload' method='post' encType="multipart/form-data">
+  <div class="form-group">
+    <label for="name">Clip Name</label>
+    <input type="text" class="form-control" id="name" aria-describedby="nameHelp" name="name" required/>
+    <small id="nameHelp" class="form-text text-muted">Give the clip a name.</small>
+  </div>
+  <div class="form-group">
+    <label for="description">Clip Description</label>
+    <input type="text" class="form-control" id="description" name="description" required/>
+  </div>
+  <div class="custom-file">
+    <label for="file">Choose a file</label>
+    <input type="file" id="file" aria-describedby="fileHelp" name="file" required/>
+    <small id="fileHelp" class="form-text text-muted">Max 100MB</small>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
