--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,3 @@
 <div class="footer">
+  <code><a class="btn btn-light btn-md" href="https://steamcommunity.com/id/Thermo-Nuclear/">Developer</a> | <a class="btn btn-light btn-md" href="https://github.com/IAmThermite/TF2Frags.net">Website GitHub</a> | <a class="btn btn-light btn-md" href="https://github.com/IAmThermite/TF2Frags-stream">Stream GitHub</a></code>
 </div>
