--- a/views/template.ejs
+++ b/views/template.ejs
@@ -7,8 +7,12 @@
   <div class='container bg-dark text-light'>
     <% include partials/navbar %>
 
-    <%- include(page) %>
-  </div>
+    <hr width="100%" style="background-color: red" />
 
-  <% include partials/footer.ejs %>
+    <%- include(page) %>
+
+    <hr width="100%" style="background-color: red" />
+    
+    <% include partials/footer.ejs %>
+  </div>
 </html>
