Update uploading to allow twitch clips
A bit of refactoring

Twitch clips currenly do not work (at least on linux) due to a
limitation with the browser plugin

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,5 +1,5 @@
 <h2>Upload</h2>
-<p>Currently only URLs (YouTube) are supported by the stream. Feel free to upload other clips as they will still be used at some point.</p>
+<p>Currently only URLs (Twitch/YouTube) are supported by the stream. Feel free to upload other clips as they will still be used at some point.</p>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="url-tab" data-toggle="tab" href="#url" role="tab" aria-controls="url" aria-selected="true">URL</a>
@@ -27,7 +27,7 @@
         <small id="urlHelp" class="form-text text-muted">Currently accepted: YouTube</small>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
-    <form>
+    </form>
   </div>
 
   <!-- demo form -->
