--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -13,7 +13,7 @@
     <% if (data.clips[i].type="url") { %>
       <tr>
         <td><%= data.clips[i].name%></td>
-        <td><a href="https://youtu.be/<%= data.clips[i].url %>">https://youtu.be/<%= data.clips[i].url%></a></td>
+        <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
         <td><%= data.clips[i].uploadedAt%></td>
         <td><%= data.clips[i].type%></td>
       </tr>
