--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,2 +1,3 @@
-<div class="header">
+<div class="header bg-dark">
+  <h3><img width="20%" src="img/header.png" alt="TF2Frags.net" /> Constat TF2 action, with help from the community</h3>
 </div>
