--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -5,7 +5,9 @@
       <th scope="col">Name</th>
       <th scope="col" width="40%">Description</th>
       <th scope="col">Uploaded at</th>
+      <th scope="col">Last played</th>
       <th scope="col">Type</th>
+      <th scope="col">Error?</th>
     </tr>
   </thead>
   <tbody>
@@ -15,15 +17,18 @@
         <td><%= data.clips[i].name%></td>
         <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
         <td><%= data.clips[i].uploadedAt%></td>
+        <td><%= data.clips[i].lastPlayed %></td>
         <td><%= data.clips[i].type%></td>
+        <td><%= data.clips[i].error %></td>
       </tr>
-
     <% } else {%>
       <tr>
         <td><%= data.clips[i].name%></td>
         <td><%= data.clips[i].description%></td>
         <td><%= data.clips[i].uploadedAt%></td>
+        <td><%= data.clips[i].lastPlayed %></td>
         <td><%= data.clips[i].type%></td>
+        <td><%= data.clips[i].error %></td>
       </tr>
     <% } %>
   <% } %>
