--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
     <% if (user) { %>
       <li class="nav-item"><a class="nav-link" href="/manage/upload/">Upload</a></li>
       <li class="nav-item"><a class="nav-link" href="/manage/">Manage</a></li>
