--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,5 +1,5 @@
 <h2>Upload</h2>
-<p>Currently only URLs (YouTube) are supported by the stream. Feel free to upload other clips as they will still be used at some point.</p>
+<p>Currently only URLs (YouTube and Twitch) are supported by the stream. Feel free to upload other clips as they will still be used at some point.</p>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="url-tab" data-toggle="tab" href="#url" role="tab" aria-controls="url" aria-selected="true">URL</a>
@@ -24,7 +24,7 @@
       <div class="form-group">
         <label for="url">URL <span style="color: red">*</span></label>
         <input type="text" class="form-control" id="url" aria-describedby="urlHelp" name="url" required maxLength="100"/>
-        <small id="urlHelp" class="form-text text-muted">Currently accepted: YouTube</small>
+        <small id="urlHelp" class="form-text text-muted">Currently accepted: YouTube, Twitch</small>
       </div>
       <div class="g-recaptcha" data-sitekey="<%= data.key %>"></div>
       <button type="submit" class="btn btn-primary">Submit</button>
