Update title in uploading demo

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -44,7 +44,7 @@
         <input type="text" class="form-control" id="description" name="description" maxLength="100" />
       </div>
       <div class="form-group">
-        <label for="description">Your Alias <span style="color: red">*</span></label>
+        <label for="description">Your Alias (in demo) <span style="color: red">*</span></label>
         <input type="text" class="form-control" aria-describedby="aliasHelp" id="alias" name="alias" required maxLength="30" />
       </div>
       <div class="form-group">
