Add support for file uploading via AWS S3
Add ability to remove clips as well
Fixed a small issue with clip descriptions not being displayed
unless it was a URL
Small style change

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -7,6 +7,10 @@
   src: url('../fonts/TF2.ttf');
 }
 
+h3 {
+  text-decoration: underline;
+}
+
 .container {
   font-family: 'TF2Build', 'Arial', sans-serif;
   padding: 1em;
