--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -8,11 +8,12 @@
       <th scope="col">Last played</th>
       <th scope="col">Type</th>
       <th scope="col">Error?</th>
+      <th scope="col">Delete</th>
     </tr>
   </thead>
   <tbody>
   <% for(let i = 0; i < data.clips.length; i++) { %>
-    <% if (data.clips[i].type="url") { %>
+    <% if (data.clips[i].type === "url") { %>
       <tr>
         <td><%= data.clips[i].name%></td>
         <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
@@ -20,6 +21,11 @@
         <td><%= data.clips[i].lastPlayed %></td>
         <td><%= data.clips[i].type%></td>
         <td><%= data.clips[i].error %></td>
+        <td>
+          <form onSubmit='return confirm("Are you sure you want to delete?")' action='/manage/delete/<%= data.clips[i]._id %>'>
+            <input type='submit' value='&#128465;' />
+          </form>
+        </td>
       </tr>
     <% } else {%>
       <tr>
@@ -29,6 +35,11 @@
         <td><%= data.clips[i].lastPlayed %></td>
         <td><%= data.clips[i].type%></td>
         <td><%= data.clips[i].error %></td>
+        <td>
+          <form onSubmit='return confirm("Are you sure you want to delete?")' action='/manage/delete/<%= data.clips[i]._id %>'>
+            <input type='submit' value='&#128465;' />
+          </form>
+        </td>
       </tr>
     <% } %>
   <% } %>
