--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,5 +1,6 @@
 <h2>Upload</h2>
 <p>Currently only URLs (YouTube and Twitch) are supported by the stream. Feel free to upload other clips as they will still be used at some point.</p>
+<p>By uploading clips you allow for the clip to be played on the stream for others to view and/or removed from the stream if need be.</p>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="url-tab" data-toggle="tab" href="#url" role="tab" aria-controls="url" aria-selected="true">URL</a>
