Add latest clips to home page

--- a/views/clips.ejs
+++ b/views/clips.ejs
@@ -2,7 +2,7 @@
 <table class="table text-light">
   <thead>
     <tr>
-      <th scope="col" maxWidth="10%">Name</th>
+      <th scope="col">Name</th>
       <th scope="col" width="40%">Description</th>
       <th scope="col">Uploaded at</th>
       <th scope="col">Last played</th>
