--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,34 @@
 <!-- Add a placeholder for the Twitch embed -->
 <div id="twitch-embed"></div>
 
+<h2>Most recent clips</h2>
+<table class="table text-light">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col" width="50%">Description</th>
+      <th scope="col">Uploaded at</th>
+    </tr>
+  </thead>
+  <tbody>
+  <% for(let i = 0; i < data.clips.length; i++) { %>
+    <% if (data.clips[i].type === "url") { %>
+      <tr>
+        <td><%= data.clips[i].name%></td>
+        <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
+        <td><%= data.clips[i].uploadedAt%></td>
+      </tr>
+    <% } else {%>
+      <tr>
+        <td><%= data.clips[i].name%></td>
+        <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
+        <td><%= data.clips[i].uploadedAt%></td>
+      </tr>
+    <% } %>
+  <% } %>
+  </tbody>
+</table>
+
 <!-- Load the Twitch embed script -->
 <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
