--- a/views/clips.ejs
+++ b/views/clips.ejs
@@ -1,7 +1,15 @@
 <h2><%= data.header %></h2>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" href="/clips/queue">Queue</a></li>
+    <li class="nav-item"><a class="nav-link" href="/clips/current">Current</a></li>
+    <li class="nav-item"><a class="nav-link" href="/clips/previous">Previous</a></li>
+  </ul>
+</nav>
 <table class="table text-light">
   <thead>
     <tr>
+      <th scope="col">Order</th>
       <th scope="col">Name</th>
       <th scope="col" width="40%">Description</th>
       <th scope="col">Uploaded at</th>
@@ -12,6 +20,7 @@
   <% for(let i = 0; i < data.clips.length; i++) { %>
     <% if (data.clips[i].type === "url") { %>
       <tr>
+        <td><%= i %></td>
         <td><%= data.clips[i].name%></td>
         <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
         <td><%= data.clips[i].uploadedAt%></td>
@@ -19,6 +28,7 @@
       </tr>
     <% } else {%>
       <tr>
+        <td><%= i %></td>
         <td><%= data.clips[i].name%></td>
         <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
         <td><%= data.clips[i].uploadedAt%></td>
