--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,6 +2,7 @@
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
     <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
+    <li class="nav-item"><a class="nav-link" href="/clips/">Clips</a></li>
     <% if (user) { %>
       <li class="nav-item"><a class="nav-link" href="/manage/upload/">Upload</a></li>
       <li class="nav-item"><a class="nav-link" href="/manage/">Manage</a></li>
