--- a/views/template.ejs
+++ b/views/template.ejs
@@ -15,4 +15,15 @@
     
     <% include partials/footer.ejs %>
   </div>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122940047-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122940047-3');
+  </script>
+
 </html>
