Add lastPlayed and uploadedAt to clip info page

--- a/views/clip.ejs
+++ b/views/clip.ejs
@@ -28,4 +28,4 @@
     </iframe>
   <% } %>
 <% } %>
-<p>Uploaded at</p>
+<p>Uploaded at: <%= data.clip.uploadedAt %> | Last played: <%= data.clip.lastPlayed %></p>
