--- a/views/clips.ejs
+++ b/views/clips.ejs
@@ -1,40 +1,37 @@
 <h2><%= data.header %></h2>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" href="/clips/">All</a></li>
     <li class="nav-item"><a class="nav-link" href="/clips/queue">Queue</a></li>
     <li class="nav-item"><a class="nav-link" href="/clips/current">Current</a></li>
     <li class="nav-item"><a class="nav-link" href="/clips/previous">Previous</a></li>
   </ul>
 </nav>
-<table class="table text-light">
+<div class="table-responsive">
+<table class="table table-dark table-striped">
   <thead>
     <tr>
-      <th scope="col">Order</th>
-      <th scope="col">Name</th>
-      <th scope="col" width="40%">Description</th>
+      <th scope="col" style="width: 1em">Name</th>
+      <th scope="col">Description</th>
       <th scope="col">Uploaded at</th>
       <th scope="col">Last played</th>
+      <th scope="col">Order</th>
     </tr>
   </thead>
   <tbody>
   <% for(let i = 0; i < data.clips.length; i++) { %>
-    <% if (data.clips[i].type === "url") { %>
-      <tr>
-        <td><%= i %></td>
-        <td><%= data.clips[i].name%></td>
+    <tr>
+      <td><a href="/clips/<%= data.clips[i].code %>"><%= data.clips[i].name %></a></td>
+      <% if (data.clips[i].type === "url") { %>
         <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
+        <% } else {%>
+          <td><%= data.clips[i].description%></td>
+        <% } %>
         <td><%= data.clips[i].uploadedAt%></td>
         <td><%= data.clips[i].lastPlayed %></td>
-      </tr>
-    <% } else {%>
-      <tr>
-        <td><%= i %></td>
-        <td><%= data.clips[i].name%></td>
-        <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
-        <td><%= data.clips[i].uploadedAt%></td>
-        <td><%= data.clips[i].lastPlayed %></td>
+        <td><%= data.clips[i].order %></td>
       </tr>
     <% } %>
-  <% } %>
   </tbody>
 </table>
+</div>
