Add tftv thread to footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
 <div class="footer">
-  <code><a class="btn btn-light btn-md" href="https://steamcommunity.com/id/Thermo-Nuclear/">Developer</a> | <a class="btn btn-light btn-md" href="https://github.com/IAmThermite/TF2Frags.net">Website GitHub</a> | <a class="btn btn-light btn-md" href="https://github.com/IAmThermite/TF2Frags-stream">Stream GitHub</a></code>
+  <code><a class="btn btn-light btn-md" href="https://steamcommunity.com/id/Thermo-Nuclear/">Developer</a> |
+    <a class="btn btn-light btn-md" href="https://github.com/IAmThermite/TF2Frags.net">Website GitHub</a> |
+    <a class="btn btn-light btn-md" href="https://github.com/IAmThermite/TF2Frags-stream">Stream GitHub</a>|
+    <a class="btn btn-light btn-md" href="https://www.teamfortress.tv/53687/automated-frag-stream-introducing-tf2frags-net">TFTV Thread</a></code>
 </div>
