Add order to the clip view page

--- a/views/clip.ejs
+++ b/views/clip.ejs
@@ -29,5 +29,5 @@
     </iframe>
   <% } %>
 <% } %>
-<p>Uploaded at: <%= data.clip.uploadedAt %> | Last played: <%= data.clip.lastPlayed %></p>
+<p>Uploaded at: <%= data.clip.uploadedAt %> | Last played: <%= data.clip.lastPlayed %> | Order: <%= data.clip.order %></p>
 <p><a href="https://steamcommunity.com/profiles/<%= data.clip.uploadedBy %>">Uploader</a></p>
