--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -15,7 +15,7 @@
   <% for(let i = 0; i < data.clips.length; i++) { %>
     <% if (data.clips[i].type === "url") { %>
       <tr>
-        <td><%= data.clips[i].name%></td>
+        <td><a href="/clips/<%= data.clips[i].code %>"><%= data.clips[i].name%></a></td>
         <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
         <td><%= data.clips[i].uploadedAt%></td>
         <td><%= data.clips[i].lastPlayed %></td>
