Add search, make clear cache on randomise
Should close #9

--- a/views/clips.ejs
+++ b/views/clips.ejs
@@ -5,6 +5,9 @@
     <li class="nav-item"><a class="nav-link" href="/clips/queue">Queue</a></li>
     <li class="nav-item"><a class="nav-link" href="/clips/current">Current</a></li>
     <li class="nav-item"><a class="nav-link" href="/clips/previous">Previous</a></li>
+    <form action="/clips" method="GET">
+      <input class="form-control" name="q" type="text" placeholder="Search" aria-label="Search" />
+    </form>
   </ul>
 </nav>
 <div class="table-responsive">
