--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,19 +13,15 @@
   </thead>
   <tbody>
   <% for(let i = 0; i < data.clips.length; i++) { %>
-    <% if (data.clips[i].type === "url") { %>
       <tr>
-        <td><%= data.clips[i].name%></td>
-        <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
-        <td><%= data.clips[i].uploadedAt%></td>
+        <td><a href="/clips/<%= data.clips[i]._id %>"><%= data.clips[i].name %></a></td>
+        <% if (data.clips[i].type === "youtube" || data.clips[i].type === "twitch") { %>
+          <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
+        <% } else {%>
+          <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
+        <% } %>
+        <td><%= new Date(data.clips[i].uploadedAt).toDateString() %></td>
       </tr>
-    <% } else {%>
-      <tr>
-        <td><%= data.clips[i].name%></td>
-        <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
-        <td><%= data.clips[i].uploadedAt%></td>
-      </tr>
-    <% } %>
   <% } %>
   </tbody>
 </table>
