--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -13,12 +13,15 @@
   </thead>
   <tbody>
   <% for(let i = 0; i < data.clips.length; i++) { %>
-    <% if (data.clips[i].type === "url") { %>
       <tr>
         <td><a href="/clips/<%= data.clips[i].code %>"><%= data.clips[i].name%></a></td>
-        <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
-        <td><%= data.clips[i].uploadedAt%></td>
-        <td><%= data.clips[i].lastPlayed %></td>
+        <% if (data.clips[i].type === 'youtube' || data.clips[i].type === 'twitch') { %>
+          <td><a href="<%= data.clips[i].url %>"><%= data.clips[i].url%></a></td>
+        <% } else { %>
+          <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
+        <% } %>
+        <td><%= new Date(data.clips[i].uploadedAt).toDateString() %></td>
+        <td><%= new Date(data.clips[i].lastPlayed).toDateString() %></td>
         <td><%= data.clips[i].type%></td>
         <td><%= data.clips[i].error %></td>
         <td>
@@ -27,21 +30,6 @@
           </form>
         </td>
       </tr>
-    <% } else {%>
-      <tr>
-        <td><%= data.clips[i].name%></td>
-        <td><%= data.clips[i].description%><br /><%= data.clips[0].fileName %></td>
-        <td><%= data.clips[i].uploadedAt%></td>
-        <td><%= data.clips[i].lastPlayed %></td>
-        <td><%= data.clips[i].type%></td>
-        <td><%= data.clips[i].error %></td>
-        <td>
-          <form onSubmit='return confirm("Are you sure you want to delete?")' action='/manage/delete/<%= data.clips[i]._id %>'>
-            <input type='submit' value='&#128465;' />
-          </form>
-        </td>
-      </tr>
-    <% } %>
   <% } %>
   </tbody>
 </table>
