--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -20,8 +20,8 @@
     <form action='/manage/upload' method='post' encType="multipart/form-data">
       <div class="form-group">
         <label for="name">Clip Name <span style="color: red">*</span></label>
-        <input type="text" class="form-control" id="name" aria-describedby="nameHelp" name="name" required maxLength="20"/>
-        <small id="nameHelp" class="form-text text-muted">Give the clip a name (max 20 chars). Used by you so you can track the clips you have uploaded.</small>
+        <input type="text" class="form-control" id="name" aria-describedby="nameHelp" name="name" required maxLength="30"/>
+        <small id="nameHelp" class="form-text text-muted">Give the clip a name (max 30 chars). Used by you so you can track the clips you have uploaded.</small>
       </div>
       <div class="form-group">
         <label for="url">URL <span style="color: red">*</span></label>
@@ -55,14 +55,14 @@
         <small id="tickHelp" class="form-text text-muted">Space separated, each pair on a new line</small>
       </div>
       <div class="form-group">
-        <label for="description"><a href="https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3#Current_codes">Country Code</a></label>
+        <label for="description">Country Code</label>
         <input type="text" class="form-control" aria-describedby="countryHelp" id="country" name="country" minLength="3" maxLength="3" />
         <small id="countryHelp" class="form-text text-muted"><a href="https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3#Current_codes">Your 3 letter country code.</a></small>
       </div>
       <div class="custom-file">
         <label for="file">Choose a file <span style="color: red">*</span></label>
         <input type="file" id="file" aria-describedby="fileHelp" name="file" required />
-        <small id="fileHelp" class="form-text text-muted">Max 100MB, accepted files: Source Demos (.dem)</small>
+        <small id="fileHelp" class="form-text text-muted">Max 150MB, accepted files: Source Demos (.dem)</small>
       </div>
       <div class="g-recaptcha" data-sitekey="<%= data.key %>"></div>
       <button type="submit" class="btn btn-primary">Submit</button>
@@ -74,8 +74,8 @@
     <form action='/manage/upload' method='post' encType="multipart/form-data">
       <div class="form-group">
         <label for="name">Clip Name <span style="color: red">*</span></label>
-        <input type="text" class="form-control" id="name" aria-describedby="nameHelp" name="name" required maxLength="20"/>
-        <small id="nameHelp" class="form-text text-muted">Give the clip a name (max 20 chars).</small>
+        <input type="text" class="form-control" id="name" aria-describedby="nameHelp" name="name" required maxLength="30"/>
+        <small id="nameHelp" class="form-text text-muted">Give the clip a name (max 30 chars).</small>
       </div>
       <div class="form-group">
         <label for="description">Clip Description</label>
@@ -93,7 +93,7 @@
       <div class="custom-file">
         <label for="file">Choose a file <span style="color: red">*</span></label>
         <input type="file" id="file" aria-describedby="fileHelp" name="file" required />
-        <small id="fileHelp" class="form-text text-muted">Max 100MB, accepted files: Videos</small>
+        <small id="fileHelp" class="form-text text-muted">Max 150MB, accepted files: Videos</small>
       </div>
       <div class="g-recaptcha" data-sitekey="<%= data.key %>"></div>
       <button type="submit" class="btn btn-primary">Submit</button>
